quick fix for the rss icon jumping when hovering
git-svn-id: https://krema.svn.beanstalkapp.com/hastuzeit@147 3445ca58-e459-48c6-80b6-aacbbe7ab71b

--- a/wphastuzeit/trunk/style/css/layout.css
+++ b/wphastuzeit/trunk/style/css/layout.css
@@ -181,7 +181,7 @@ div {
 }
 
 #navigation .feed a:hover {
-	background: #e0e2e5 url(../images/rss.png) no-repeat 5px center;
+	background: #e0e2e5 url(../images/rss.png) no-repeat 5px 11px;
 	max-width: 40px;
 }
 
